# RustLearning

./: .gitignore
Experiments/experiment/: Cargo.toml
Experiments/experiment/src/: main.rs
actix/whatsapp_bridge/bridge_lib/: Cargo.toml
actix/whatsapp_bridge/bridge_lib/rust_whatsapp_bridge/: bruno.json  send_messages.bru
actix/whatsapp_bridge/bridge_lib/src/: lib.rs
actix/whatsapp_bridge/bridge_lib/src/app/: app.rs
actix/whatsapp_bridge/bridge_lib/src/controllers/: mod.rs  send_messages.rs
actix/whatsapp_bridge/bridge_lib/src/databases/connections/: surrealdb.rs
actix/whatsapp_bridge/bridge_lib/src/middleware/: mod.rs
actix/whatsapp_bridge/bridge_lib/src/middleware/auth_middleware/: mod.rs  verify_jwt_auth.rs
actix/whatsapp_bridge/bridge_lib/src/middleware/data_record/: mod.rs
actix/whatsapp_bridge/bridge_lib/src/models/: mod.rs
actix/whatsapp_bridge/bridge_lib/src/models/constants_data/: common.rs
actix/whatsapp_bridge/bridge_lib/src/models/enums_data/messages/: messages_types.rs  mod.rs
actix/whatsapp_bridge/bridge_lib/src/models/enums_data/users/: mod.rs  (+1 more)
actix/whatsapp_bridge/bridge_lib/src/models/structs_data/: mod.rs
actix/whatsapp_bridge/bridge_lib/src/routes/: messages.rs
actix/whatsapp_bridge/bridge_lib/src/utils/: mod.rs
actix/whatsapp_bridge/bridge_lib/src/utils/encryption_handlers/: jwt_handlers.rs  mod.rs
dioxus/learning-dioxus/: Cargo.toml  Dioxus.toml
dioxus/learning-dioxus/src/: main.rs
dioxus/learning-dioxus/src/components/: mod.rs  story_component.rs
dioxus/learning-dioxus/src/models/: story_model.rs
(+1429 files in other folders)
