[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
wither = { version = "0.9.0", features = ["async-std-runtime"], default-features = false }
