[package]
name = "bridge_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
base64-url = "3.0.0"
futures-util = "0.3.31"
hyper = "1.4.1"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
redis = "0.27.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "2.0.3"
tokio = { version = "1.40.0", features = ["full"] }
